--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.13",
     "helmet": "^8.1.0",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-helmet-async": "^2.0.5",
+    "react-persist": "^1.0.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
