Fix: Delete for key secret

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,12 +49,12 @@ jobs:
         id: repo
         run: echo "name=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
 
-      - name: Execute remote SSH commands using SSH key
+      - name: Execute remote SSH commands
         uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.KEY }}
+          password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
             docker pull ghcr.io/${{ steps.repo.outputs.name }}:latest
