--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,37 +1,71 @@
-name: Build and Push
+name: Build & Deploy Frontend
+
 on:
   push:
     tags:
-      - "v*.*.*"
-
-permissions:
-  contents: read
-  packages: write
+      - "v*"
 
 jobs:
-  build:
+  build_and_push:
     runs-on: ubuntu-latest
+    environment: BUILD
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-      - uses: actions/checkout@v4
-      
-      - name: Login to GHCR
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 19
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Setup Buildx
-        uses: docker/setup-buildx-action@v3
-      
-      - name: Get repo name
-        id: repo
-        run: echo "name=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
 
-      - name: Build and push
-        uses: docker/build-push-action@v5
+      - name: Set Image Name
+        id: vars
+        run: echo "image=ghcr.io/${{ github.repository_owner }}/koda-frontend" >> $GITHUB_OUTPUT
+
+      - name: Build Docker Image
+        run: |
+          VERSION=${GITHUB_SHA::7}
+          docker build \
+            --build-arg VITE_BASE_URL=${{ secrets.VITE_BASE_URL }} \
+            -t ${{ steps.vars.outputs.image }}:latest \
+            -t ${{ steps.vars.outputs.image }}:$VERSION .
+
+      - name: Push Docker Image
+        run: |
+          VERSION=${GITHUB_SHA::7}
+          docker push ${{ steps.vars.outputs.image }}:latest
+          docker push ${{ steps.vars.outputs.image }}:$VERSION
+
+  deploy:
+    needs: build_and_push
+    runs-on: ubuntu-latest
+    environment: build
+
+    steps:
+      - name: Deploy to Server via SSH
+        uses: appleboy/ssh-action@v1
         with:
-          context: .
-          push: true
-          tags: ghcr.io/${{ steps.repo.outputs.name }}:latest
-          build-args: VITE_BASE_URL=${{ secrets.VITE_BASE_URL }}
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          port: ${{ secrets.PORT }}
+          script: |
+            cd server/frontend/
+            docker compose down -v
+            docker compose pull
+            docker compose up -d
+            docker system prune -af --volumes
