fix: delete duplicate tag latest

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Push Docker Image
         run: |
           VERSION=${GITHUB_SHA::7}
-          docker push ghcr.io/anggiprayoga28/koda-frontend:latest:latest
+          docker push ghcr.io/anggiprayoga28/koda-frontend:latest
           docker push ghcr.io/anggiprayoga28/koda-frontend:$VERSION:$VERSION
 
   deploy:
