--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,15 +15,7 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 19
-
-      - name: Install Dependencies
-        run: npm install
+        uses: actions/checkout@v4     
 
       - name: Log in to GHCR
         uses: docker/login-action@v3
@@ -32,20 +24,46 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set Image Name
+      - name: Extract Version
         id: vars
-        run: echo "image=ghcr.io/${{ github.repository_owner }}/koda-frontend" >> $GITHUB_OUTPUT
-
-      - name: Build Docker image
         run: |
-          VERSION=${GITHUB_SHA::7}
+          # Jika menggunakan tag v1.0.0, ambil version-nya
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/v}
+          else
+            VERSION=${GITHUB_SHA::7}
+          fi
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "image=ghcr.io/${{ github.repository_owner }}/koda-frontend" >> $GITHUB_OUTPUT
+
+      - name: Build Docker Image
+        run: |
           docker build \
             --build-arg VITE_BASE_URL=${{ secrets.VITE_BASE_URL }} \
-            -t ghcr.io/anggiprayoga28/koda-frontend:latest \
-            -t ghcr.io/anggiprayoga28/koda-frontend:$VERSION .
+            -t ${{ steps.vars.outputs.image }}:latest \
+            -t ${{ steps.vars.outputs.image }}:${{ steps.vars.outputs.version }} \
+            .
 
       - name: Push Docker Image
         run: |
-          VERSION=${GITHUB_SHA::7}
-          docker push ghcr.io/anggiprayoga28/koda-frontend:latest
-          docker push ghcr.io/anggiprayoga28/koda-frontend:$VERSION
+          docker push ${{ steps.vars.outputs.image }}:latest
+          docker push ${{ steps.vars.outputs.image }}:${{ steps.vars.outputs.version }}
+
+  deploy_to_server:
+    needs: build_and_push
+    runs-on: ubuntu-latest
+    environment: build
+
+    steps:
+      - name: Deploy to Server via SSH
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          port: ${{ secrets.PORT }}
+          script: |
+            docker compose -f server/frontend/docker-compose.yaml down -v
+            docker compose -f server/frontend/docker-compose.yaml pull
+            docker compose -f server/frontend/docker-compose.yaml up -d
+            docker system prune -af --volumes
