--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,8 +50,9 @@ jobs:
           docker push ghcr.io/anggiprayoga28/koda-frontend:${{ steps.vars.outputs.version }}
 
   deploy:
-    needs: build-and-release
-    runs-on: ubuntu-latest
+    needs: build-and-push
+    runs-on: ubuntu-latest  
+    environment: build
     steps:
       - name: Execute remote SSH commands using SSH key
         uses: appleboy/ssh-action@v1
