--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,7 @@ jobs:
   deploy:
     needs: build_and_push
     runs-on: ubuntu-latest
+    environment: BUILD
     steps:
       - name: Execute remote SSH commands using SSH key
         uses: appleboy/ssh-action@v1
