fix: delete typo

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,5 +65,5 @@ jobs:
             cd ~/server/frontend
             docker compose down -v
             docker compose pull
-            docker compose up app -d
+            docker compose up -d
             docker system prune -a --volumes
